syntax = "proto3";
package cheqdid.cheqdnode.cheqd.v1;

option go_package = "github.com/cheqd/cheqd-node/x/cheqd/types/v1";

import "google/protobuf/any.proto";
import "cheqd/v1/common.proto";

message Did {
  string id = 1;
  repeated string controller = 2; //optional
  repeated VerificationMethod verification_method = 3; // optional
  repeated string authentication = 4; // optional
  repeated string assertion_method = 5; // optional
  repeated string capability_invocation = 6; // optional
  repeated string capability_delegation = 7; // optional
  repeated string key_agreement = 8; // optional
  repeated Service service = 9; // optional
  repeated string also_known_as = 10; // optional
  repeated string context = 11;
}

message VerificationMethod {
  string id = 1;
  string type = 2;
  string controller = 3;
  repeated KeyValuePair public_key_jwk = 4; // optional
  string public_key_multibase = 5; // optional
}

message Service {
  string id = 1;
  string type = 2;
  string service_endpoint = 3;
}


