syntax = "proto3";
package cheqdid.cheqdnode.cheqd.v1;
import "google/protobuf/any.proto";
import "cheqd/v1/did.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/cheqd/cheqd-node/x/cheqd/types/v1";

// Msg defines the Msg service.
service Msg {
  rpc CreateDid(MsgCreateDid) returns (MsgCreateDidResponse);
  rpc UpdateDid(MsgUpdateDid) returns (MsgUpdateDidResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreateDid {
  MsgCreateDidPayload payload = 1;
  repeated SignInfo signatures = 2;
}

message MsgUpdateDid {
  MsgUpdateDidPayload payload = 1;
  repeated SignInfo signatures = 2;
}

message SignInfo {
  string verification_method_id = 1;
  string signature = 2;
}

message MsgCreateDidPayload {
  string id = 1;
  repeated string controller = 2;
  repeated VerificationMethod verification_method = 3;
  repeated string authentication = 4;
  repeated string assertion_method = 5;
  repeated string capability_invocation = 6;
  repeated string capability_delegation = 7;
  repeated string key_agreement = 8;
  repeated string also_known_as = 9;
  repeated Service service = 10;
  repeated string context = 11;
}

message MsgCreateDidResponse {
  string id = 1;
}

message MsgUpdateDidPayload {
  string id = 1;
  repeated string controller = 2;
  repeated VerificationMethod verification_method = 3;
  repeated string authentication = 4;
  repeated string assertion_method = 5;
  repeated string capability_invocation = 6;
  repeated string capability_delegation = 7;
  repeated string key_agreement = 8;
  repeated string also_known_as = 9;
  repeated Service service = 10;
  repeated string context = 11;
  string version_id = 12;
}

message MsgUpdateDidResponse {
  string id = 1;
}
